# furikuripy

./: README.md  pyproject.toml
prebuilts/: exec.yaml
src/: common.py  explorer.py  fuku_asm.py  fuku_code_analyzer.py  fuku_code_holder.py  fuku_code_profiler.py  fuku_inst.py  fuku_misc.py  fuku_obfuscator.py  shellcode_obfucation.py  shellcode_obfuscation.py
src/furikuripy/: cli.py  common.py  fuku_asm.py  fuku_code_analyzer.py  fuku_code_holder.py  fuku_code_profiler.py  fuku_inst.py  fuku_misc.py  fuku_obfuscator.py  fuku_relocation.py  shellcode_obfuscation.py
src/furikuripy/x86/: fuku_asm_body.py  fuku_asm_ctx.py  fuku_asm_ctx_pattern.py  fuku_immediate.py  fuku_mutation_ctx.py  fuku_mutation_x64.py  fuku_mutation_x86.py  fuku_operand.py  fuku_register.py  fuku_register_math.py  fuku_register_math_metadata.py  fuku_register_math_tables.py  fuku_type.py  iced_builder.py  inst_tables.py  misc.py
src/furikuripy/x86/mutation_templates/x64/: __init__.py  jcc.py  jmp.py  junk.py  mov.py  pop.py  push.py  ret.py  xchg.py
src/x86/: fuku_asm_body.py  fuku_asm_ctx.py  fuku_asm_ctx_pattern.py  fuku_immediate.py  fuku_mutation_ctx.py  fuku_mutation_x64.py  fuku_mutation_x86.py  fuku_operand.py  fuku_register.py  fuku_register_math.py  fuku_register_math_metadata.py  fuku_register_math_tables.py  fuku_type.py  misc.py
src/x86/mutation_templates/x64/: __init__.py  jcc.py  jmp.py  junk.py  mov.py  pop.py  push.py  ret.py  xchg.py
