[tool.poetry]
name = "furikuripy"
version = "0.1.0"
description = ""
authors = ["Veids <veidsme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
capstone = "^5.0.1"
pydantic = "^2.6.1"
more-itertools = "^10.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
