[tool.poetry]
name = "furikuripy"
version = "0.1.1"
description = ""
authors = ["Veids <veidsme@gmail.com>"]
readme = "README.md"
packages = [
  {include = "furikuripy", from = "src"}
]

[tool.poetry.scripts]
shellcode_obfuscation="furikuripy.shellcode_obfuscation:app"

[tool.poetry.dependencies]
python = "^3.11"
capstone = "^5.0.1"
pydantic = "^2.6.1"
rich = "^13.7.0"
typer = "^0.9.0"
pyyaml = "^6.0.1"
poetry-dynamic-versioning = {extras = ["plugin"], version = "^1.2.0"}
iced-x86 = "^1.21.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
ipython = "^8.21.0"
ipdb = "^0.13.13"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "(?P<base>\\d+\\.\\d+\\.\\d+)"
format = "{base}+{commit}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
